--- a/harness.html
+++ b/harness.html
@@ -1,13 +1,15 @@
 <h1>Snuggsi Platform Toolkit</h1>
 
 <!-- snuggsi.js suite -->
+<!-- <script src='./validator.js'></script> -->
 <script src='./proxy.js'></script>
 <script src='./state.js'></script>
-<script src='./validator.js'></script>
+<script src='./attribute.js'></script>
+<script src='./attributes.js'></script>
 
 <script src='./script.js'></script>
 
-<script id="__bs_script__">//<![CDATA[
+<script>
 void function () {
   if (!(location.hostname.includes('localhost'))) return
 
@@ -15,4 +17,4 @@ void function () {
     "<script src='/browser-sync/browser-sync-client.js'><\/script>"
   )
 } ()
-//]]></script>
+</script>
