--- a/harness.html
+++ b/harness.html
@@ -8,10 +8,8 @@
 </template>
 
 <script src='./state.js'></script>
-<script src='./attributes.js'></script>
+<script src='./elements/attributes.js'></script>
 <script src='./elements/text-content.js'></script>
 <script src='./elements/template.js'></script>
-
-<script src='./script.js'></script>
 
 <script src='./vendor/browser-sync.js'></script>
