README: Update , , and

--- a/harness.html
+++ b/harness.html
@@ -9,7 +9,7 @@
 
 <script src='./state.js'></script>
 <script src='./elements/attributes.js'></script>
-<script src='./elements/text-content.js'></script>
+<script src='./elements/text.js'></script>
 <script src='./elements/template.js'></script>
 
 <script src='./vendor/browser-sync.js'></script>
