--- a/harness.html
+++ b/harness.html
@@ -11,5 +11,6 @@
 <script src='./elements/attributes.js'></script>
 <script src='./elements/text.js'></script>
 <script src='./elements/template.js'></script>
+<script src='./elements/tag.js'></script>
 
 <script src='./vendor/browser-sync.js'></script>
