Migrate to .es extension

--- a/harness.html
+++ b/harness.html
@@ -20,10 +20,10 @@ ul {
   <li>Hello {name}!</li>
 </template>
 
-<script src='./state.js'></script>
-<script src='./elements/attributes.js'></script>
-<script src='./elements/text.js'></script>
-<script src='./elements/tag.js'></script>
-<script src='./elements/template.js'></script>
+<script src='./state.es'></script>
+<script src='./elements/attributes.es'></script>
+<script src='./elements/text.es'></script>
+<script src='./elements/tag.es'></script>
+<script src='./elements/template.es'></script>
 
-<script src='./vendor/browser-sync.js'></script>
+<script src='./vendor/browser-sync.es'></script>
