--- a/harness.html
+++ b/harness.html
@@ -1,16 +1,10 @@
-<style>
-ul {
-  margin: 5%;
-  padding: 0;
-  list-style: none;
-  position: absolute;
-  background: #bada55;
-  display: block;
-  width: 90%;
-}
-</style>
+<script src='./state.es' defer></script>
+<script src='./elements/text.es' defer></script>
+<script src='./elements/tag.es' defer></script>
+<script src='./elements/template.es' defer></script>
+<script src='./elements/element.es' defer></script>
 
-<h1>Snuggsi Platform Toolkit</h1>
+<script src='./vendor/browser-sync.es'></script>
 
 <template id='items'>
   <ul title={name}></ul>
@@ -20,10 +14,4 @@ ul {
   <li>Hello {name}!</li>
 </template>
 
-<script src='./state.es'></script>
-<script src='./elements/attributes.es'></script>
-<script src='./elements/text.es'></script>
-<script src='./elements/tag.es'></script>
-<script src='./elements/template.es'></script>
-
-<script src='./vendor/browser-sync.es'></script>
+<h1>ツ snuggsi - Modern DOM Extensions</h1>
