--- a/harness.html
+++ b/harness.html
@@ -1,9 +1,17 @@
-<script src='./state.es' defer></script>
+<title>ツsnuggsi Easy DOM Components</title>
+
+<meta charset='UTF-8'>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+<link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
+
+<script src='./context.es' defer></script>
 <script src='./elements/text.es' defer></script>
 <script src='./elements/tag.es' defer></script>
 <script src='./elements/template.es' defer></script>
 <script src='./elements/element.es' defer></script>
-
+<script src='./elements/component.es' defer></script>
+<script src='./notification.es' defer></script>
 <script src='./vendor/browser-sync.es'></script>
 
 <template id='items'>
@@ -14,4 +22,12 @@
   <li>Hello {name}!</li>
 </template>
 
-<h1>ツ snuggsi - Modern DOM Extensions</h1>
+<template id='conference'>
+  <h1>Holy Fuck This Worked!</h1>
+</template>
+
+
+<hgroup>
+  <h1>ツsnuggsi</h1>
+  <h2>Easy DOM Components</h2>
+</hgroup>
