--- a/harness.html
+++ b/harness.html
@@ -8,6 +8,7 @@
 <script src='./context.es' defer></script>
 <script src='./elements/text.es' defer></script>
 <script src='./elements/tag.es' defer></script>
+<script src='./elements/template.polyfill.es' defer></script>
 <script src='./elements/template.es' defer></script>
 <script src='./elements/element.es' defer></script>
 <script src='./elements/component.es' defer></script>
