--- a/harness.html
+++ b/harness.html
@@ -7,14 +7,15 @@
 
 <script src='./context.es' defer></script>
 <script src='./elements/text.es' defer></script>
-<script src='./elements/tag.es' defer></script>
 <script src='./elements/template.polyfill.js' defer></script>
+<script src='./elements/tag.es' defer></script>
 <script src='./elements/template.es' defer></script>
 <script src='./elements/element.es' defer></script>
+
 <script src='./elements/component.es' defer></script>
 <script src='./notification.es' defer></script>
 <script src='./vendor/browser-sync.es'></script>
-<script src='./elements/calendar.es' defer></script>
+<script src='./index.es' defer></script>
 
 <hgroup>
   <h1>ツsnuggsi</h1>
