--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -3,6 +3,7 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+<!-- https://jakearchibald.com/2016/link-in-body -->
 <link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
 
 <script src=../inject.es></script>
@@ -97,13 +98,16 @@ label:first-letter { margin-left: 3em }
 
 <style>
 infinity-calendar {
+  height: 100vh;
   text-align: center;
   display: flex;
   flex-flow: row wrap;
+  align-content: flex-start;
 }
 
 infinity-calendar header {
   flex-basis: 100%;
+  height: 10vh;
   text-align: center;
   background: var(--darkest-color);
 }
