Update Hello World example

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -1,4 +1,4 @@
-<script src=../elements/tokenize.es></script>
+<script src=../elements/walkable.es></script>
 <script src=../elements/template.es></script>
 <script src=../elements/Global-Event-Handlers.es></script>
 <script src=../elements/element.es></script>
