Update Infinity Calendar example

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -5,10 +5,11 @@
 
 <link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
 
-<script src=../elements/tokenize.es></script>
 <script src=../elements/template.es></script>
 
-<script src=../elements/Global-Event-Handlers.es></script>
+<script src=../elements/global-event-handlers.es></script>
+<script src=../elements/parent-node.es></script>
+<script src=../elements/event-target.es></script>
 <script src=../elements/element.es></script>
 
 <hgroup>
