Update infinity calendar

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -1,9 +1,9 @@
 <title>snuggsi ツ - Infinity Calendar</title>
 
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta charset=UTF-8>
+<meta name=viewport content='width=device-width, initial-scale=1'>
 
-<link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script src=../elements/template.es></script>
 
@@ -35,63 +35,5 @@
   <link rel=stylesheet href=./infinity-calendar.css>
   <script src=infinity-calendar.es defer></script>
 </infinity-calendar>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<form>
-  <label>Ejecutada?
-    <input type='checkbox'>
-  </label>
-
-  <label for=date>Event
-    <input name=date type=date>
-
-
-  </label>
-</form>
-
-<style>
-form {
-  display: none;
-  background: var(--darkest-color);
-}
-
-label {
-  margin: 1em;
-  display: block;
-  text-align: left;
-  line-height: 5em;
-  color: var(--lightest-color);
-  background: var(--darkest-color) ;
-}
-input,
-label:first-letter { margin-left: 3em }
-
-@media (orientation: landscape) {
-  form { background: red }
-
-  label {
-    width: 49%;
-    display: inline-block;
-  }
-}
-</style>
 
 <script src='../../vendor/browser-sync.es'></script>
