--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -1,11 +1,16 @@
-<title>Autocomplete Dropdown List</title>
+<title>snuggsi ツ - Autocomplete Dropdown List</title>
 
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta charset=UTF-8>
+<meta name=viewport content='width=device-width, initial-scale=1'>
 
-<link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script src='http://www.devpunks.com/snuggsi.es' defer></script>
+<script src=../elements/template.es></script>
+
+<script src=../elements/global-event-handlers.es></script>
+<script src=../elements/parent-node.es></script>
+<script src=../elements/event-target.es></script>
+<script src=../elements/element.es></script>
 
 <p>
   This is a refactor of
