Update main index.html for custom imports

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+<title>snuggsi ツ</title>
 
-<link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
+<meta charset=UTF-8>
+<meta name=viewport content='width=device-width, initial-scale=1'>
 
-<script src=../elements/tag.es></script>
-<script src=../elements/template.es></script>
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=import href=/examples/hello-world.html>
+
+<script src=../elements/parent-node.es></script>
+<script src=../elements/event-target.es></script>
+<script src=../elements/global-event-handlers.es></script>
 <script src=../elements/element.es></script>
-<!--<script src=http://www.devpunks.com/snuggsi.es></script>-->
+<script src=../elements/template.es></script>
 
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
-<base href='//localhost:8181'>
+<base href=//localhost:8181>
 
 <hgroup>
-  <h1>ツsnuggsi</h1>
+  <h1>snuggsi ツ</h1>
   <h2>Easy Web Components</h2>
 </hgroup>
 
-<hello-world>
+<hello-world></hello-world>
