--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -1,7 +1,8 @@
-<script src=../elements/walkable.es></script>
-<script src=../elements/template.es></script>
-<script src=../elements/Global-Event-Handlers.es></script>
+<script src=../elements/parent-node.es></script>
+<script src=../elements/event-target.es></script>
+<script src=../elements/global-event-handlers.es></script>
 <script src=../elements/element.es></script>
+<script src=../elements/template.es></script>
 
 <hello-world>
 
@@ -12,7 +13,7 @@
   (class extends HTMLElement {
     initialize () {
       this.append
-        (new Text ('Hello World'))
+        (new Text ('Hello World  ツ'))
     }
   })
   </script>
