Update infinity calendar

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -5,6 +5,7 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
+<script src=./webcomponents-hi-ce.js></script>
 <script src=../elements/template.es></script>
 
 <script src=../elements/global-event-handlers.es></script>
@@ -24,8 +25,8 @@
   <input placeholder='open console before typing'>
 
   <menu>
-    <button onclick=onprevious>Previous</button>
-    <button onclick=onnext>Next</button>
+    <button>Previous</button>
+    <button>Next</button>
   </menu>
 
   <template name='days'>
@@ -36,7 +37,7 @@
 
   <!-- https://jakearchibald.com/2016/link-in-body -->
   <link rel=stylesheet href=./infinity-calendar.css>
-  <script src=infinity-calendar.es defer></script>
+  <script type='text/javascript;version=1.8' src=infinity-calendar.js defer></script>
 </infinity-calendar>
 
 <script src='../../vendor/browser-sync.es'></script>
