Update hello world example

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -1,21 +1,28 @@
-<script src=../elements/parent-node.es></script>
-<script src=../elements/event-target.es></script>
-<script src=../elements/global-event-handlers.es></script>
-<script src=../elements/element.es></script>
-<script src=../elements/template.es></script>
+<title>snuggsi - Infinity Calendar</title>
+
+<script>
+console.log ('Hello world')
+</script>
+
+<meta charset=UTF-8>
+<meta name=viewport content=width=device-width,initial-scale=1>
+
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+
+<script src=./webcomponents-hi-ce.js></script>
+<script src=../dist/snuggsi.min.js></script>
+
+<link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
+<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+
+<h1>snuggsi ツ</h1>
 
 <hello-world>
-
-  <script defer>
-
-  Element `hello-world`
-
-  (class extends HTMLElement {
-    initialize () {
-      this.append
-        (new Text ('Hello World  ツ'))
-    }
-  })
-  </script>
-
+  hello world
 </hello-world>
+
+<hello-world>
+  hello world
+</hello-world>
+
+<script src=../../vendor/browser-sync.es></script>
