Update infinity calendar

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -1,17 +1,23 @@
 <title>snuggsi ツ - Infinity Calendar</title>
 
 <meta charset=UTF-8>
-<meta name=viewport content='width=device-width, initial-scale=1'>
+<meta name=viewport content=width=device-width,initial-scale=1>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script src=./webcomponents-hi-ce.js></script>
-<script src=../elements/template.es></script>
+<style>
 
-<script src=../elements/global-event-handlers.es></script>
-<script src=../elements/event-target.es></script>
-<script src=../elements/parent-node.es></script>
-<script src=../elements/element.es></script>
+  body
+    { display: flex; flex-flow: column }
+
+</style>
+
+<script src=./webcomponents-hi-ce.js></script>
+<script src=../dist/snuggsi.es></script>
+
+<link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
+<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+
 
 <hgroup>
   <h1>snuggsi ツ</h1>
