Update test harness

--- a/harness.html
+++ b/harness.html
@@ -1,22 +1,13 @@
-<title>ツsnuggsi Easy DOM Components</title>
+<title>ツsnuggsi Easy Web Components</title>
 
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 
 <link rel='stylesheet' href='http://www.devpunks.com/typography.css'>
 
-<script src='./elements/tokenize.es' defer></script>
-<script src='./elements/template.es' defer></script>
-<script src='./elements/element.es' defer></script>
+<script src=./examples/webcomponents-hi-ce.js></script>
+<script src=./dist/snuggsi.es></script>
 
-<script src='./elements/component.es' defer></script>
-<script src='./notification.es' defer></script>
-<script src='./vendor/browser-sync.es'></script>
-<script src='./index.es' defer></script>
-<!--
-https://blog.hospodarets.com/native-ecmascript-modules-the-first-overview
-https://blog.hospodarets.com/native-ecmascript-modules-nomodule
--->
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
 <base href='//localhost:8181/examples/'>
 
@@ -35,3 +26,5 @@ https://blog.hospodarets.com/native-ecmascript-modules-nomodule
     {year} yas
   </template>
 </x-foo>
+
+<script src='./vendor/browser-sync.es'></script>
