use a real unicode ellipsis not an html entity, since we're in utf-8 mode

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -36,7 +36,7 @@ Element `input-output`
     { this.render () }
 
   get echo () // tokenized property
-    { return this.select ('input#message').value || '&hellip;' }
+    { return this.select ('input#message').value || '…' }
 })
 </script>
 
