Update index page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <title>snuggsi ツ</title>
 
 <meta charset=UTF-8>
-<meta name=viewport content='width=device-width, initial-scale=1'>
+<meta name=viewport content=width=device-width,initial-scale=1>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
-<link rel=import href=/examples/hello-world.html>
 
-<script src=../elements/parent-node.es></script>
-<script src=../elements/event-target.es></script>
-<script src=../elements/global-event-handlers.es></script>
-<script src=../elements/element.es></script>
-<script src=../elements/template.es></script>
+<script src=webcomponents-hi-ce.js></script>
+<script src=../dist/snuggsi.es defer></script>
+
+<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+
 
 <!-- https://www.speedshop.co/2015/10/21/hacking-head-tags-for-speed-and-profit.html -->
 
