--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -49,7 +49,7 @@
 
   <!-- https://jakearchibald.com/2016/link-in-body -->
   <link rel=stylesheet href=infinity-calendar.css>
-  <script src=infinity-calendar.js defer></script>
+  <script src=infinity-calendar.es defer></script>
 </infinity-calendar>
 
 
