Add support for select month/year dropdown change

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -41,8 +41,8 @@
     <button onclick=onnext>Next</button>
   </menu>
 
-  <template name='days'>
-    <a onclick=ondayclick href=#{day}>
+  <template name=days>
+    <a href=#{day} onclick=ondayclick>
       <time datetime>Day {day}</time>
     </a>
   </template>
