Update hello world example

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -15,7 +15,7 @@
 
 </style>
 
-<script async src=/examples/webcomponents-hi-ce.js></script>
+<script async src=webcomponents-hi-ce.js></script>
 <script async src=../dist/snuggsi.es></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
